--- a/index.html
+++ b/index.html
@@ -1,131 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Church Website</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="footer.css"> 
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="footer.css">
+    <title>MFM Ayobo Sermon</title>
 </head>
 <body>
 
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Church</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sermons</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg custom-navbar fixed-top">
+        <a class="navbar-brand" href="#">MFM Ayobo Sermon</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sermons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-  <!-- Scrollable Image Section -->
-  <div class="scroll-container mt-5">
-    <div class="scroll-section">
-      <img src="image/newcamera1.jpg" alt="Church Image 1">
-      <img src="image/newcamera1.jpg" alt="Church Image 2">
-      <img src="image/newcamera1.jpg" alt="Church Image 3">
-      <img src="image/newcamera1.jpg" alt="Church Image 4">
-    </div>
-    <!-- Indicator -->
-    <div class="indicator">
-      <div class="active"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
-
-<section class="audio-download py-5">
-    <div class="container">
-        <header class="text-center mb-5">
-            <h2 class="display-4">Audio Downloads</h2>
-            <p class="lead">Listen to our latest sermons and download them for later.</p>
-        </header>
-        <div class="row justify-content-center" id="audio-list">
-            <div class="col-md-4 mb-4 audio-item">
-                <div class="card shadow border-light rounded">
-                    <div class="card-body">
-                        <h3 class="card-title">Sermon Title 1</h3>
-                        <audio controls class="w-100">
-                            <source src="audio/280924 (1).mp3" type="audio/mpeg">
-                            Your browser does not support the audio tag.
-                        </audio>
-                        <a href="audio/280924 (1).mp3" class="btn btn-success mt-3" download>
-                            <i class="fas fa-download"></i> Download
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4 audio-item">
-                <div class="card shadow border-light rounded">
-                    <div class="card-body">
-                        <h3 class="card-title">Sermon Title 2</h3>
-                        <audio controls class="w-100">
-                            <source src="audio/sermon2.mp3" type="audio/mpeg">
-                            Your browser does not support the audio tag.
-                        </audio>
-                        <a href="audio/sermon2.mp3" class="btn btn-success mt-3" download>
-                            <i class="fas fa-download"></i> Download
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Add more audio items as needed -->
+    <!-- Video Background -->
+    <div class="video-background">
+        <video autoplay muted loop>
+            <source src="video/Holy Spirit in a form of Dove Easy Worship Background - Video Loop.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="overlay-text">
+            <h2>Welcome to MFM Ayobo Sermon</h2>
+            <p>Join us for uplifting messages that inspire faith and hope.</p>
         </div>
     </div>
-</section>
 
-<!-- Footer -->
-<footer class="footer" id="dynamic-footer">
-    <div class="container">
-        <div class="row text-center" id="footer-content">
-            <!-- Footer items will be dynamically generated here -->
-        </div>
+    <!-- Sermon Information -->
+    <div class="sermon-info container text-center mt-5 pt-4">
+        <h2>About the Sermon</h2>
+        <p>
+            Join us for inspiring sermons that uplift the spirit and encourage faith. 
+            Our dedicated ministers deliver messages rooted in the Word of God, aimed at bringing 
+            hope and strength to all who attend. Whether you're seeking guidance, comfort, or 
+            spiritual growth, our sermons provide a welcoming environment for everyone. 
+            We invite you to experience the love and grace of God through our ministry.
+        </p>
     </div>
-</footer>
+    <div class="container mt-5 pt-5">
+        <h2 class="section-title">Download and Play Audio Messages</h2>
+        <h1 class="section-title underline">RO Messages</h1>
 
-<!-- Other content of your website -->
-
-<!-- Bootstrap JS and dependencies (optional) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="footer.js"></script> <!-- Link to your custom JavaScript file -->
-
-
-
-  <!-- Bootstrap JS and Popper.js -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Link to your custom JS -->
-  <script src="scripts.js"></script>
-  <script src="footer.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <div class="message-card">
+            <h3 class="text-2xl font-semibold">Message Title 1</h3>
+            <div class="audio-controls">
+                <audio controls>
+                    <source src="audio/the creative annoiting.mp3" type="audio/mpeg">
+                    Your browser does not support the audio tag.
+                </audio>
+                <a href="audio/the creative annoiting.mp3" download class="download-btn">
+                    <i class="fas fa-download"></i> Download
+                </a>
+            </div>
+        </div>
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-icons">
+                <div class="footer-icon">
+                    <i class="fas fa-music"></i>
+                    <div>Choir Administration</div>
+                </div>
+                <div class="footer-icon">
+                    <i class="fas fa-paper-plane"></i>
+                    <div>Go Message</div>
+                </div>
+                <div class="footer-icon">
+                    <i class="fas fa-video"></i>
+                    <div>Video</div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
+    <script src="script.js"></script>
 </body>
 </html>
