--- a/index.html
+++ b/index.html
@@ -64,7 +64,19 @@
     <div class="container mt-5 pt-5">
         <h2 class="section-title">Download and Play Audio Messages</h2>
         <h1 class="section-title underline">RO Messages</h1>
-
+        <div class="message-card">
+            <h3 class="text-2xl font-semibold">Arise & Shine </h3>
+            <p>(Guest minister: pst Adebayo)</p>
+            <div class="audio-controls">
+                <audio controls>
+                    <source src="audio/Arise and shine.mp3" type="audio/mpeg">
+                    Your browser does not support the audio tag.
+                </audio>
+                <a href="audio/Arise and shine.mp3" download class="download-btn">
+                    <i class="fas fa-download"></i> Download
+                </a>
+            </div>
+        </div>
         <div class="message-card">
             <h3 class="text-2xl font-semibold">Keys into creative anoiting</h3>
             <div class="audio-controls">
