--- a/index.html
+++ b/index.html
@@ -106,15 +106,21 @@
         <div class="container">
             <div class="footer-icons">
                 <div class="footer-icon">
+                    <a href="choir.html">
                     <i class="fas fa-music"></i>
-                    <div>Choir Administration</div>
+                    </a>
+                    <div>Choir Ministration</div>
                 </div>
                 <div class="footer-icon">
+                    <a href="https://naijasermons.com.ng/dr-dk-olukoya-messages/">
                     <i class="fas fa-paper-plane"></i>
+                    </a>
                     <div>Go Message</div>
                 </div>
                 <div class="footer-icon">
+                    <a href="https://www.youtube.com/results?search_query=mfm+tv">
                     <i class="fas fa-video"></i>
+                    </a>
                     <div>Video</div>
                 </div>
             </div>
