--- a/choir.html
+++ b/choir.html
@@ -67,13 +67,13 @@
             </div>
         </div>
         <div class="message-card">
-            <h3 class="text-2xl font-semibold">Keys into creative anoiting</h3>
+            <h3 class="text-2xl font-semibold">You Make a Way</h3>
             <div class="audio-controls">
                 <audio controls>
-                    <source src="audio/keys into creative annoiting.mp3" type="audio/mpeg">
+                    <source src="audio/you make a way.mp3" type="audio/mpeg">
                     Your browser does not support the audio tag.
                 </audio>
-                <a href="audio/keys into creative annoiting.mp3" download class="download-btn">
+                <a href="audio/you make a way.mp3" download class="download-btn">
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
