--- a/choir.html
+++ b/choir.html
@@ -91,6 +91,19 @@
                 </a>
             </div>
         </div>
+        <div class="message-card">
+            <h3 class="text-2xl font-semibold">Come great Deliverer</h3>
+            <p></p>
+            <div class="audio-controls">
+                <audio controls>
+                    <source src="audio/comegreat deliverer.mp3" type="audio/mpeg">
+                    Your browser does not support the audio tag.
+                </audio>
+                <a href="audio/comegreat deliverer.mp3" download class="download-btn">
+                    <i class="fas fa-download"></i> Download
+                </a>
+            </div>
+        </div>
     <!-- Footer Section -->
     <footer class="footer">
         <div class="container">
