--- a/choir.html
+++ b/choir.html
@@ -51,21 +51,21 @@
 
     <!-- Sermon Information -->
     
-    <div class="container mt-5 pt-5">
-        <h1 class="section-title underline">Choir Ministration</h1>
-        <div class="message-card">
-            <h3 class="text-2xl font-semibold">Praise & Worship </h3>
-            <p>(27-oct-2024)</p>
-            <div class="audio-controls">
-                <audio controls>
-                    <source src="audio/praise&worship.mp3" type="audio/mpeg">
-                    Your browser does not support the audio tag.
-                </audio>
-                <a href="audio/praise&worship.mp3" download class="download-btn">
-                    <i class="fas fa-download"></i> Download
-                </a>
+        <div class="container mt-5 pt-5">
+            <h1 class="section-title underline">Choir Ministration</h1>
+            <div class="message-card">
+                <h3 class="text-2xl font-semibold">Praise & Worship </h3>
+                <p>(27-oct-2024)</p>
+                <div class="audio-controls">
+                    <audio controls>
+                        <source src="audio/praise&worship.mp3" type="audio/mpeg">
+                        Your browser does not support the audio tag.
+                    </audio>
+                    <a href="audio/praise&worship.mp3" download class="download-btn">
+                        <i class="fas fa-download"></i> Download
+                    </a>
+                </div>
             </div>
-        </div>
         <div class="message-card">
             <h3 class="text-2xl font-semibold">You Make a Way</h3>
             <div class="audio-controls">
@@ -104,13 +104,27 @@
                 </a>
             </div>
         </div>
+        <div class="message-card">
+            <h3 class="text-2xl font-semibold">Eze Ebube</h3>
+            <p></p>
+            <div class="audio-controls">
+                <audio controls>
+                    <source src="audio/eze ebube.mp3" type="audio/mpeg">
+                    Your browser does not support the audio tag.
+                </audio>
+                <a href="audio/eze ebube.mp3" download class="download-btn">
+                    <i class="fas fa-download"></i> Download
+                </a>
+            </div>
+        </div>
+       
     <!-- Footer Section -->
     <footer class="footer">
         <div class="container">
             <div class="footer-icons">
                 <div class="footer-icon">
                     <i class="fas fa-music"></i>
-                    <div>Choir Administration</div>
+                    <div>Choir Ministration</div>
                 </div>
                 <div class="footer-icon">
                     <a href="https://naijasermons.com.ng/dr-dk-olukoya-messages/">
