--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg custom-navbar fixed-top">
         <a class="navbar-brand" href="#">MFM Ayobo Sermon</a>
+        <img src="image/mfmlogo.jpeg" alt="" height="50px"width="50px"border-radius="25px">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
