--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="message-card">
-            <h3 class="text-2xl font-semibold">Keys into creative anoiting</h3>
+            <h3 class="text-2xl font-semibold">Keys into creative anointing</h3>
             <div class="audio-controls">
                 <audio controls>
                     <source src="audio/keys into creative annoiting.mp3" type="audio/mpeg">
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="message-card">
-            <h3 class="text-2xl font-semibold">The creative annoiting</h3>
+            <h3 class="text-2xl font-semibold">The creative anointing</h3>
             <div class="audio-controls">
                 <audio controls>
                     <source src="audio/the creative annoiting.mp3" type="audio/mpeg">
