--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="container mt-5 pt-5">
         <h2 class="section-title">Download and Play Audio Messages</h2>
-        <h1 class="section-title underline">RO Messages</h1>
+        <h1 class="section-title underline">MRO Messages</h1>
         <div class="message-card">
             <h3 class="text-2xl font-semibold">Arise & Shine </h3>
             <p>(Guest minister: pst Adebayo)</p>
