--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div>Go Message</div>
                 </div>
                 <div class="footer-icon">
-                    <a href="https://www.youtube.com/results?search_query=mfm+tv">
+                    <a href="https://www.youtube.com/@MFMMinistries">
                     <i class="fas fa-video"></i>
                     </a>
                     <div>Video</div>
