--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
         <h2 class="section-title">Download and Play Audio Messages</h2>
         <h1 class="section-title underline">MRO Messages</h1>
         <div class="message-card">
+            <div class="message-card">
+                <h3 class="text-2xl font-semibold">The Representative Of God</h3>
+                <div class="audio-controls">
+                    <audio controls>
+                        <source src="audio/REPRESENTATIVE OF GOD.mp3" type="audio/mpeg">
+                        Your browser does not support the audio tag.
+                    </audio>
+                    <a href="audio/REPRESENTATIVE OF GOD.mp3" download class="download-btn">
+                        <i class="fas fa-download"></i> Download
+                    </a>
+                </div>
+            </div>
             <h3 class="text-2xl font-semibold">Arise & Shine </h3>
             <p>(Guest minister: pst Adebayo)</p>
             <div class="audio-controls">
