--- a/choir.html
+++ b/choir.html
@@ -56,6 +56,18 @@
         <div class="container mt-5 pt-5">
             <h1 class="section-title underline">Choir Ministration</h1>
             <div class="message-card">
+                <h3 class="text-2xl font-semibold">OH SINNER COME</h3>
+                <div class="audio-controls">
+                    <audio controls>
+                        <source src="audio/come o,come o,oh sinner come o.mp3" type="audio/mpeg">
+                        Your browser does not support the audio tag.
+                    </audio>
+                    <a href="audio/come o,come o,oh sinner come o.mp3" download class="download-btn">
+                        <i class="fas fa-download"></i> Download
+                    </a>
+                </div>
+            </div>
+            <div class="message-card">
                 <h3 class="text-2xl font-semibold">I Just Want To Be Where You Are</h3>
                 <div class="audio-controls">
                     <audio controls>
