--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <h3 class="text-2xl font-semibold">Open Heaven (pst sam)</h3>
             <div class="audio-controls">
                 <audio controls>
-                    <source src="audio/open heaven (PST SAM) (1).mp3" type="audio/mpeg">
+                    <source src="audio/open heaven (PST SAMUEL) (1).mp3" type="audio/mpeg">
                     Your browser does not support the audio tag.
                 </audio>
-                <a href="audio/open heaven (PST SAM) (1).mp3" download class="download-btn">
+                <a href="audio/open heaven (PST SAMUEL) (1).mp3" download class="download-btn">
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
