--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                 </a>
             </div>
         </div>
+        </div>
+        
     <!-- Footer Section -->
     <footer class="footer">
         <div class="container">
