--- a/choir.html
+++ b/choir.html
@@ -163,6 +163,7 @@
                     <i class="fas fa-video"></i>
                     </a>
                     <div>Video</div>
+                    KKKKKK
                 </div>
             </div>
         </div>
